[package]
name = "otex"
version = "0.4.3"
edition = "2024"
authors = ["Eric Bogard <ebo@testmachine.ai>", "Oliver Hill <ohh@testmachine.ai>"]
description = "Macros and minimal wrappers over the opentelemetry api."
license = "MIT OR Apache-2.0"
repository = "https://github.com/testmachine-ai/otex"
readme = "README.md"
categories = ["development-tools"]
keywords = ["tooling", "opentelemetry", "logging"]

[dependencies]
env_logger = "0.11.8"
http = "1.3"
lazy_static = "1.5.0"
log = { version = "0.4.27", features = ["kv", "std"] }
opentelemetry = "0.30.0"
opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic"] }
opentelemetry-stdout = "0.30.0"
opentelemetry_sdk = "0.30.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"

[dev-dependencies]
tokio = { version = "1.45.1", features = ["macros", "rt"] }


[features]
stdout = []
